objects/ProductRequest.object
<CustomObject>
    <fields>
        <fullName>Account_Information__c</fullName>
        <formula>TEXT(Account.Priority__c)+&quot; - &quot;+ Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <formula>IF( ISBLANK(Asset__c ), &quot;&quot;,



IF( TEXT(Type__c) = &apos;Parts Consumed Backfill&apos;, &quot;&quot;, Asset__r.Asset_Playable_Image__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <label>Cancellation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Formula__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; +CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by__c</fullName>
        <label>Created by</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Shuttle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difference_Between_Requested_Consumed__c</fullName>
        <formula>Quantity_Requested__c - Product_Consumed__r.QuantityConsumed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Between Requested &amp; Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_List_View__c</fullName>
        <formula>OR(

AND (TEXT(Status ) = &apos;Received&apos;, OR( ISBLANK(Product_Consumed__c),  RMA_Status__c = &apos;RMA Not Expected&apos; , RMA_Status__c = &apos;RMA Received&apos;)), 

AND(TEXT(Type__c) = &apos;Warehouse Restock&apos; , TEXT(Sub_Status__c) = &apos;Received at Warehouse&apos;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude from Burr Ridge List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Local_Warehouse_List_View__c</fullName>
        <formula>OR(

AND(

 TEXT(Type__c) = &apos;Parts Consumed Backfill&apos; , 
 TEXT(Sub_Status__c) = &apos;Received at Warehouse&apos;, 
 OR(
      ISBLANK( Product_Consumed__c ), 
      RMA_Status__c = &apos;RMA Not Expected&apos; , 
      RMA_Status__c = &apos;RMA Received&apos;
    )), 



AND(
 
 TEXT(Type__c) = &apos;Parts on Order&apos; , 
 TEXT(Sub_Status__c) = &apos;Picked Up by Tech&apos;, 
 OR(
      ISBLANK(Product_Consumed__c), 
      RMA_Status__c = &apos;RMA Not Expected&apos; , 
      RMA_Status__c = &apos;RMA Received&apos;
    )),


AND(
 TEXT(Type__c) = &apos;Warehouse Restock&apos;, 
 TEXT(Sub_Status__c) = &apos;Received at Warehouse&apos;

    ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude from Local Warehouse List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Machine_Out_Of_Order__c</fullName>
        <label>Is Machine Out of Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jobs</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locally_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locally Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_DBA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location DBA Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Marketing_Request__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Record_Type__c</fullName>
        <formula>Marketing_Request__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Request</label>
        <referenceTo>Marketing_Request__c</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Requested__c</fullName>
        <inlineHelpText>Please Provide an Accel Item # or Vendor Item #</inlineHelpText>
        <label>Part # Requested</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Consumed_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Consumed Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Consumed_Number__c</fullName>
        <description>Populated in the Log Parts Consumed FSM flow; used to match the Product Consumed with the related Product Request record.</description>
        <label>Product Consumed Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Consumed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product Consumed record that this Product Request fulfilled. This could either be a case where a product was consumed and a backfill Product Request was auto-generated, or when a Parts On Order Product Request is generated and the parts are later consumed. This field is auto-populated via the mobile app.</inlineHelpText>
        <label>Product Consumed</label>
        <referenceTo>ProductConsumed</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Request_Number__c</fullName>
        <formula>Case.RMA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Warehouse_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Products</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Requests (Product(Warehouse App))</relationshipLabel>
        <relationshipName>Product_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Consumed__c</fullName>
        <formula>Product_Consumed__r.QuantityConsumed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Details__c</fullName>
        <formula>RMA_Status__c +&quot; - &quot;+ RMA_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <formula>Product_Consumed__r.RMA_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Status_Picklist__c</fullName>
        <label>RMA Status Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMA Pulled</fullName>
                </value>
                <value>
                    <fullName>RMA Shipped</fullName>
                </value>
                <value>
                    <fullName>RMA Received</fullName>
                </value>
                <value>
                    <fullName>RMA Not Expected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <formula>TEXT( Product_Consumed__r.RMA_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA #</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Count__c</fullName>
        <label>Total Request Count</label>
        <summarizedField>ProductRequestLineItem.Count__c</summarizedField>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requests_Filled__c</fullName>
        <label>Requests Filled</label>
        <summarizedField>ProductRequestLineItem.Count__c</summarizedField>
        <summaryFilterItems>
            <field>ProductRequestLineItem.Marketing_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SAS_Machine_Type__c</fullName>
        <formula>IF( Asset__r.Record_Type_Name__c = &apos;VGT&apos;, &quot;SAS&quot;+&quot; &quot;+ Asset__r.SAS__c + &quot; - &quot;+  Asset__r.Model__c, 

  IF( OR(Asset__r.Record_Type_Name__c = &apos;Redemption&apos;, Asset__r.Record_Type_Name__c = &apos;Redemption(COAM)&apos;),  Asset__r.SAS__c +&quot; - &quot;+&apos;Redemption&apos;, &apos;General Supplies&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAS &amp; Machine Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Accel_Regional_Office__c</fullName>
        <label>Ship to Accel Regional Office:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burr Ridge</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>LaSalle</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Tinley Park (FSG)</fullName>
                </value>
                <value>
                    <fullName>Rich &amp; Junnie&apos;s</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part Picked</fullName>
                </value>
                <value>
                    <fullName>Part Shipped</fullName>
                </value>
                <value>
                    <fullName>Received at Warehouse</fullName>
                </value>
                <value>
                    <fullName>Picked Up by Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TO_Number__c</fullName>
        <label>TO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Backordered_Count__c</fullName>
        <label>Total Backordered Count</label>
        <summarizedField>ProductRequestLineItem.Count__c</summarizedField>
        <summaryFilterItems>
            <field>ProductRequestLineItem.Marketing_Status__c</field>
            <operation>equals</operation>
            <value>Backordered</value>
        </summaryFilterItems>
        <summaryForeignKey>ProductRequestLineItem.ParentId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Completed__c</fullName>
        <formula>Requests_Filled__c =  Request_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parts on Order</fullName>
                </value>
                <value>
                    <fullName>Parts Consumed Backfill</fullName>
                </value>
                <value>
                    <fullName>Warehouse Restock</fullName>
                </value>
                <value>
                    <fullName>Cage Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_SAS_or_General_Items__c</fullName>
        <label>VGT SAS # or General Items</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Redemption</fullName>
                </value>
                <value>
                    <fullName>General Supplies/Consumables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Burr_Ridge_Outbound_Product_Requests</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Burr Ridge Warehouse</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Accel Central Hub</value>
        </filters>
        <label>Burr Ridge Central All Product Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Collinsville_Product_Requests</fullName>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <columns>WorkOrder</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>DestinationLocation</field>
            <operation>equals</operation>
            <value>Collinsville Warehouse</value>
        </filters>
        <label>Collinsville All Product Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cage_Requests</fullName>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Product_Warehouse_App__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>Asset__c</columns>
        <columns>Status</columns>
        <columns>Cancellation_Notes__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Cage Request</value>
        </filters>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Warehouse_Request</value>
        </filters>
        <label>All Open Cage Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Open_RMAs</fullName>
        <columns>Account_Information__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>RMA_Status_Picklist__c</columns>
        <columns>Name</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Asset__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Burr Ridge Warehouse</value>
        </filters>
        <filters>
            <field>RMA_Status__c</field>
            <operation>equals</operation>
            <value>RMA Pulled,RMA Shipped</value>
        </filters>
        <filters>
            <field>Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Picked Up by Tech</value>
        </filters>
        <label>All Open RMAs</label>
    </listViews>
    <listViews>
        <fullName>All_ProductRequests</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Requests</label>
    </listViews>
    <listViews>
        <fullName>Burr_Ride_Central</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) Or (2 AND 3 AND 4 And 5)</booleanFilter>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>Cancellation_Notes__c</columns>
        <columns>TO_Number__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Burr Ridge Warehouse</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Received,Shipped,Backordered,Cancelled</value>
        </filters>
        <filters>
            <field>Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Part Shipped,Picked Up by Tech</value>
        </filters>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Accel Central Hub</value>
        </filters>
        <label>Burr Ridge Central Open Product Requests</label>
    </listViews>
    <listViews>
        <fullName>Burr_Ride_Central_Backordered_Parts</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR (1 AND 3 AND 4)</booleanFilter>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Burr Ridge Warehouse</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Backordered</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Accel Central Hub</value>
        </filters>
        <label>Burr Ridge Central Backordered Parts</label>
    </listViews>
    <listViews>
        <fullName>Burr_Ridge_Central_Open_RMAs</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Account_Information__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>RMA_Number__c</columns>
        <columns>RMA_Status__c</columns>
        <columns>RMA_Status_Picklist__c</columns>
        <columns>Name</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>DestinationLocation</columns>
        <columns>Asset__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RMA_Status__c</field>
            <operation>equals</operation>
            <value>RMA Pulled,RMA Shipped</value>
        </filters>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>SourceLocation</field>
            <operation>equals</operation>
            <value>Burr Ridge Warehouse</value>
        </filters>
        <label>Burr Ridge Central Open RMAs</label>
    </listViews>
    <listViews>
        <fullName>Champaign_All_Product_Requests</fullName>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>Created_By_Formula__c</columns>
        <columns>CreatedDate</columns>
        <columns>WorkOrder</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>DestinationLocation</field>
            <operation>equals</operation>
            <value>Champaign Warehouse</value>
        </filters>
        <label>Champaign All Product Requests</label>
    </listViews>
    <listViews>
        <fullName>Champaign_Inbound_Product_Requests</fullName>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>Cancellation_Notes__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>CreatedDate</columns>
        <columns>WorkOrder</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>DestinationLocation</field>
            <operation>equals</operation>
            <value>Champaign Warehouse</value>
        </filters>
        <filters>
            <field>Exclude_from_Local_Warehouse_List_View__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Picked Up by Tech</value>
        </filters>
        <label>Champaign Open Product Requests</label>
    </listViews>
    <listViews>
        <fullName>Collinsville_Inbound_Product_Requests</fullName>
        <columns>Account_Information__c</columns>
        <columns>Name</columns>
        <columns>Asset_Status__c</columns>
        <columns>SAS_Machine_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Type__c</columns>
        <columns>Locally_Available__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>Cancellation_Notes__c</columns>
        <columns>TO_Number__c</columns>
        <columns>RMA_Details__c</columns>
        <columns>CreatedDate</columns>
        <columns>WorkOrder</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>ProductRequest.Service_Part_Request</value>
        </filters>
        <filters>
            <field>DestinationLocation</field>
            <operation>equals</operation>
            <value>Collinsville Warehouse</value>
        </filters>
        <filters>
            <field>Exclude_from_Local_Warehouse_List_View__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Picked Up by Tech</value>
        </filters>
        <label>Collinsville Open Product Requests</label>
    </listViews>
    <listViews>
        <fullName>In_Process_Requests</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>WorkOrder</columns>
        <columns>WorkOrderLineItem</columns>
        <columns>DestinationLocation</columns>
        <columns>SourceLocation</columns>
        <columns>Case</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>In Process Requests</label>
    </listViews>
    <listViews>
        <fullName>My_ProductRequests</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Product_Requests_Lightning_Page</fullName>
        <columns>Name</columns>
        <columns>DestinationLocation</columns>
        <columns>Product__c</columns>
        <columns>Quantity_Requested__c</columns>
        <columns>Status</columns>
        <columns>Sub_Status__c</columns>
        <columns>Cancellation_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Exclude_from_Local_Warehouse_List_View__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Picked Up by Tech</value>
        </filters>
        <label>My Open Product Requests</label>
    </listViews>
</CustomObject>